# app/readium-backend/src/main/java/com/br/klaus/readium/collection/api/dto/MoveReadingCollectionRequestDTO.java
@@ -1,0 +1,11 @@
+package com.br.klaus.readium.collection.api.dto;
+
+import jakarta.validation.constraints.Min;
+import jakarta.validation.constraints.NotNull;
+
+public record MoveReadingCollectionRequestDTO(
+        @NotNull
+        @Min(0)
+        Integer targetIndex
+) {
+}
