# app/readium-backend/src/main/java/com/br/klaus/readium/collection/api/dto/ReadingCollectionResponseDTO.java
@@ -7,7 +7,8 @@ public record ReadingCollectionResponseDTO(
         String description,
         String color,
         String icon,
+        int sortOrder,
+        String templateId,
         long booksCount
 ) {
 }
-
